# libsignal-verus

./: Cargo.toml  README-verus.md
docs/: VERIFICATION_REPORT.md  shared_state_seams.md
rust/protocol/: Cargo.toml
rust/protocol/src/: lib.rs  verus_seam2.rs
rust/protocol/src/state/: kyber_prekey.rs  prekey.rs  signed_prekey.rs
rust/protocol/tests/: seam_tests.rs
verification/: .gitignore
verification/verus/: seam2.rs  seam2_trait.rs
verification/verus/seam_crate/: Cargo.toml
verification/verus/seam_crate/src/: lib.rs
verification/verus/seam_real/: Cargo.toml
verification/verus/seam_real/src/: lib.rs
